[gd_scene load_steps=17 format=3 uid="uid://011vcqwk7xrw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_py5ok"]
[ext_resource type="Texture2D" uid="uid://dxjsie3kf5qjx" path="res://idle.png" id="2_12o6n"]
[ext_resource type="Texture2D" uid="uid://bvxny0pfl18fi" path="res://jetpack_anim.png" id="3_otcxe"]
[ext_resource type="Texture2D" uid="uid://c0vn3fpnqq1qc" path="res://running animation.png" id="3_wcecc"]
[ext_resource type="Texture2D" uid="uid://cilkeuqy228rv" path="res://shooting_animation.png" id="5_201aw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se4qy"]
size = Vector2(8, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2oo5"]
atlas = ExtResource("2_12o6n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybfsm"]
atlas = ExtResource("2_12o6n")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysjnh"]
atlas = ExtResource("3_otcxe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvc66"]
atlas = ExtResource("3_otcxe")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag45f"]
atlas = ExtResource("3_wcecc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80wsy"]
atlas = ExtResource("3_wcecc")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sftlv"]
atlas = ExtResource("3_wcecc")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7q7f"]
atlas = ExtResource("3_wcecc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bor0u"]
atlas = ExtResource("5_201aw")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lo23x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2oo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybfsm")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysjnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvc66")
}],
"loop": true,
"name": &"jetpack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag45f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80wsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sftlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7q7f")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bor0u")
}],
"loop": false,
"name": &"shoot",
"speed": 3.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_py5ok")

[node name="player_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_se4qy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_lo23x")
animation = &"shoot"
autoplay = "idle"
frame_progress = 1.0

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="shootinganim_timer" type="Timer" parent="."]
wait_time = 0.33

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="shootinganim_timer" to="." method="_on_shootinganim_timer_timeout"]
